@@ -27,7 +27,7 @@ require_once('include/reports.inc.php');
 $page['title'] = 'S_AVAILABILITY_REPORT';
 $page['file'] = 'report2.php';
 $page['hist_arg'] = array('config', 'groupid', 'hostid', 'tpl_triggerid');
-$page['scripts'] = array('class.calendar.js', 'effects.js');
+$page['scripts'] = array('class.calendar.js');
 $page['type'] = detect_page_type(PAGE_TYPE_HTML);
 
 include_once('include/page_header.php');
