@@ -27,7 +27,7 @@ require_once('include/blocks.inc.php');
 $page['title'] = 'S_CUSTOM_SLIDES';
 $page['file'] = 'slides.php';
 $page['hist_arg'] = array('elementid');
-$page['scripts'] = array('effects.js','dragdrop.js','class.pmaster.js','class.calendar.js','gtlc.js');
+$page['scripts'] = array('class.pmaster.js', 'class.calendar.js', 'gtlc.js');
 
 $page['type'] = detect_page_type(PAGE_TYPE_HTML);
 
@@ -356,10 +356,6 @@ include_once('include/page_header.php');
 	//		$element = get_screen($screen['screenid'],2,$effectiveperiod);
 
 			$slides_wdgt->addItem(new CSpan(_('Loading...'), 'textcolorstyles'));
-
-
-			$jsmenu = new CPUMenu(null, 170);
-			$jsmenu->InsertJavaScript();
 		}
 		else{
 			$slides_wdgt->addItem(new CTableInfo(S_NO_SLIDES_DEFINED));
@@ -367,9 +363,6 @@ include_once('include/page_header.php');
 
 		$slides_wdgt->show();
 	}
-
-?>
-<?php
 
 include_once('include/page_footer.php');
 
